--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "sass": "^1.56.1",
         "vite": "^5.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "maska": "^2.1.11"
     }
 }
