--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "maska": "^2.1.11"
+        "maska": "^2.1.11",
+        "pinia": "^2.1.7",
+        "yup": "^1.3.3"
     }
 }
